--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <div id="app">
       <h1>Hello my friend</h1>
     </div>
-    <img class="img" src="./img/logo.svg" alt="less8Kbyte" />
-    <img class="img" src="./img/mobile.png" alt="less8Kbyte" />
-    <img class="imgBig" src="./img/wendy.jpg" alt="more1mb" />
-    <img class="imgBig" src="./img/dices.png" alt="more8Kbyte" />
+    <img class="img" src="./assets/img/logo.svg" alt="less8Kbyte" />
+    <img class="img" src="./assets/img/mobile.png" alt="less8Kbyte" />
+    <img class="imgBig" src="./assets/img/wendy.jpg" alt="more1mb" />
+    <img class="imgBig" src="./assets/img/dices.png" alt="more8Kbyte" />
   </body>
 </html>
