--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,9 @@
       This is a project for learning
       <span class="font-style-italic">Webpack</span>
     </p>
+    <img id="firstImage" src="../src/images/bell.png" alt="" />
+    <img id="secondImage" src="../src/images/bell.svg" alt="" />
+    <img id="thirdImage" src="../src/images/logos.png" alt="" />
+    <img id="fourthImage" src="../src/images/landscape.jpg" alt="" />
   </body>
 </html>
